<resources>
    <string name="app_name">TecNM UPN Nuevo Ingreso</string>
    <string name="nuevo_ingreso">Nuevo Ingreso TecNM \n campus Uruapan</string>
    <string name="cerrar">Cerrar</string>
    <string name="correo_jefe"><a href="juanandrade@tecuruapan.edu.mx">Google</a></string>
    <string name="acerca_de">Acerca de</string>
    <string name="sesion_cerrada">Sesión cerrada</string>
    <string name="nueva_generacion">Nueva Generación</string>
    <string name="numero_de_control">Número de control:</string>
    <string name="nombre">Nombre:</string>
    <string name="carrera">Carrera:</string>
    <string name="escanear_qr">Escanear Pase</string>
    <string name="telefono">Teléfono:</string>
    <string name="todo">TODO</string>
    <string name="gestor_central">Gestor central</string>
    <string name="agregar">Agregar</string>
    <string name="generar_listas">Generar Listas</string>
    <string name="actualizar_registros">Actualizar Registros</string>
    <string name="ingresa_los_datos_al_sistema_n_deben_de_tener_el_siguiente_formato_n_nsin_tel_fono_n">Ingresa los datos al sistema deben de tener el siguiente formato:  </string>
    <string name="ingresa_los_datos_al_sistema_n_deben_de_tener_el_siguiente_formato_n_nsin_tel_fono_n2">Sin teléfono: \n \n\"210400XX\",\"ING. EN SISTEMAS COMPUTACIONALES\",\"NOMBRE POR APELLIDOS(PATERNO MATERNO NOMBRES)\",\"\" </string>
    <string name="ingresa_los_datos_al_sistema_n_deben_de_tener_el_siguiente_formato_n_nsin_tel_fono_n3">Con teléfono: \n \n\"210400XX\",\"ING. EN SISTEMAS COMPUTACIONALES\",\"NOMBRE POR APELLIDOS\",\"TEL 10 Dígitos\" \nNOTA: TODOS LOS DATOS CON MAYUSCULAS SIN ACENTOS y la carrera debe comenzar con (ING.ESPACIO...) \"ISC. ...\"</string>
    <string name="n_mero_de_control">Número de control</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="seleccione_una_carrera">Seleccione una carrera</string>
    <string name="phone">Teléfono</string>
    <string name="registrar">Registrar</string>
    <string name="salir">Salir</string>
    <string name="asistencias">Asistencias</string>
    <string name="message_pass">Introducir contraseña para acceder a funciones de administrador.</string>
    <string name="acceder">acceder</string>
    <string name="pass">Contraseña</string>
    <string name="registrar_asistencia">Registrar asistencia</string>
    <string name="eliminar">Eliminar</string>
    <string name="message_security">Estimado usuario, para poder hacer uso de la app es necesario que introduzca la contraseña que los administradores le han proporcionado.</string>
    <string name="cerrar_sesion">Cerrar sesión</string>

</resources>