<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">

          <TextView
              android:id="@+id/textView"
              android:textAlignment="center"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginStart="32dp"
              android:layout_marginTop="32dp"
              android:layout_marginEnd="32dp"
              android:layout_marginBottom="10dp"
              android:text="@string/nuevo_ingreso"
              android:textColor="@color/blue_pantone_294"
              android:textSize="24sp" />


          <TextView
              android:id="@+id/textView_Ncontrol"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginStart="32dp"
              android:layout_marginTop="32dp"
              android:layout_marginEnd="32dp"
              android:layout_marginBottom="16dp"
              android:text="@string/numero_de_control"
              android:textColor="@color/black"
              android:textSize="20sp" />

          <TextView
              android:id="@+id/textView_Nombre"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginStart="32dp"
              android:layout_marginTop="16dp"
              android:layout_marginEnd="32dp"
              android:layout_marginBottom="16dp"
              android:text="@string/nombre"
              android:textColor="@color/black"
              android:textSize="20sp" />

          <TextView
              android:id="@+id/textView_Carrera"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginStart="32dp"
              android:layout_marginTop="16dp"
              android:layout_marginEnd="32dp"
              android:layout_marginBottom="16dp"
              android:text="@string/carrera"
              android:textColor="@color/black"
              android:textSize="20sp" />

          <TextView
              android:id="@+id/textView_Telefono"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginStart="32dp"
              android:layout_marginTop="16dp"
              android:layout_marginEnd="32dp"
              android:layout_marginBottom="16dp"
              android:text="@string/telefono"
              android:textColor="@color/black"
              android:textSize="20sp" />

          <Button
              android:id="@+id/button_Check"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginStart="32dp"
              android:layout_marginTop="32dp"
              android:layout_marginEnd="32dp"
              android:layout_marginBottom="32dp"
              android:insetLeft="10dp"
              android:insetRight="10dp"
              android:text="@string/escanear_qr" />

      </LinearLayout>
  </ScrollView>

</LinearLayout>