<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">

          <TextView
              android:id="@+id/textView"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginStart="32dp"
              android:layout_marginTop="32dp"
              android:layout_marginEnd="32dp"
              android:layout_marginBottom="10dp"
              android:text="@string/message_pass"
              android:textAlignment="inherit"
              android:textColor="@color/black"
              android:textSize="20sp"
              android:textStyle="bold" />

          <com.google.android.material.textfield.TextInputLayout
              android:id="@+id/editText_Password"
              style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginStart="30dp"
              android:layout_marginEnd="30dp"
              android:hint="@string/pass"
              app:backgroundTint="@color/blue_pantone_294">

              <com.google.android.material.textfield.TextInputEditText
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textColor="@android:color/black"
                  android:textSize="18sp" />

          </com.google.android.material.textfield.TextInputLayout>

          <Button
              android:id="@+id/button_Check"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginStart="32dp"
              android:layout_marginTop="30dp"
              android:layout_marginEnd="30dp"
              android:layout_marginBottom="32dp"
              android:insetLeft="10dp"
              android:insetRight="10dp"
              android:text="@string/acceder" />

      </LinearLayout>
  </ScrollView>

</LinearLayout>