<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">

          <TextView
              android:id="@+id/textView_MessageSecurity"
              android:textAlignment="center"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginStart="32dp"
              android:layout_marginTop="32dp"
              android:layout_marginEnd="32dp"
              android:layout_marginBottom="10dp"
              android:text="@string/nuevo_ingreso"
              android:textColor="@color/blue_pantone_294"
              android:textSize="24sp" />


          <TextView
              android:id="@+id/textView1"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginStart="32dp"
              android:layout_marginTop="16dp"
              android:layout_marginEnd="32dp"
              android:layout_marginBottom="16dp"
              android:text="@string/ingresa_los_datos_al_sistema_n_deben_de_tener_el_siguiente_formato_n_nsin_tel_fono_n"
              android:textColor="@color/black"
              android:textSize="20sp" />
          <TextView
              android:id="@+id/textView2"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginStart="32dp"
              android:layout_marginTop="16dp"
              android:layout_marginEnd="32dp"
              android:layout_marginBottom="16dp"
              android:text="@string/ingresa_los_datos_al_sistema_n_deben_de_tener_el_siguiente_formato_n_nsin_tel_fono_n2"
              android:textColor="@color/black"
              android:textSize="20sp" />
          <TextView
              android:id="@+id/textView3"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginStart="32dp"
              android:layout_marginTop="16dp"
              android:layout_marginEnd="32dp"
              android:layout_marginBottom="16dp"
              android:text="@string/ingresa_los_datos_al_sistema_n_deben_de_tener_el_siguiente_formato_n_nsin_tel_fono_n3"
              android:textColor="@color/black"
              android:textSize="20sp" />
          <com.google.android.material.textfield.TextInputLayout
              android:id="@+id/editText_alumnos"
              style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginStart="20dp"
              android:layout_marginTop="10dp"
              android:layout_marginEnd="20dp"
              android:layout_marginBottom="0dp"
              android:hint="Ingrese los datos máx 400 (registros)"
              app:backgroundTint="@color/blue_pantone_294">

              <com.google.android.material.textfield.TextInputEditText
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="textMultiLine"
                  android:scrollbars="vertical"
                  android:textColor="@android:color/black"
                  android:textSize="18sp" />

          </com.google.android.material.textfield.TextInputLayout>
          <Button
              android:id="@+id/button_subir"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginStart="32dp"
              android:layout_marginTop="32dp"
              android:layout_marginEnd="32dp"
              android:layout_marginBottom="32dp"
              android:insetLeft="10dp"
              android:insetRight="10dp"
              android:text="Agregar datos al sistema" />

      </LinearLayout>
  </ScrollView>

</LinearLayout>